force-app/main/default/objects/Account/fields/CWEO__c.field-meta.xml
<CustomField>
    <fullName>CWEO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check this box if you know the CEO</description>
    <label>CWEO</label>
    <type>Checkbox</type>
</CustomField>