force-app/main/default/objects/Account/fields/Zero_Field__c.field-meta.xml
<CustomField>
    <fullName>Zero_Field__c</fullName>
    <description>I&apos;m updating the description</description>
    <externalId>true</externalId>
    <inlineHelpText>Zero field ist o be used by AE</inlineHelpText>
    <label>Zero Field</label>
    <length>45</length>
    <type>Text</type>
</CustomField>